[gd_scene load_steps=4 format=3 uid="uid://csk031h1vrd2u"]

[ext_resource type="Texture2D" uid="uid://b6liupbn1kgra" path="res://assets/controller_gui/goal.png" id="1_6wvw2"]
[ext_resource type="Script" path="res://scenes/goal.gd" id="1_q844q"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0kjy2"]
radius = 49.3628

[node name="Goal" type="Area2D"]
scale = Vector2(2.36, 2.36)
collision_layer = 2
script = ExtResource("1_q844q")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.152534, 21.8813)
scale = Vector2(0.40678, 0.40678)
shape = SubResource("CircleShape2D_0kjy2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-0.152542, 21.8814)
texture = ExtResource("1_6wvw2")

[node name="PointParticles" type="Node2D" parent="."]

[node name="Positions" type="Node2D" parent="PointParticles"]

[node name="Marker2D9" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(57.2034, -26.6949)

[node name="Marker2D8" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(56.7797, -55.0847)

[node name="Marker2D7" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(13.9831, -29.2373)

[node name="Marker2D6" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(-20.7627, -19.0678)

[node name="Marker2D5" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(25.8475, -50.4237)

[node name="Marker2D4" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(-20.7627, -52.9661)

[node name="Marker2D3" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(1.27119, -60.1695)

[node name="Marker2D2" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(-6.35593, -41.5254)

[node name="Marker2D" type="Marker2D" parent="PointParticles/Positions"]
position = Vector2(33.4746, -16.9492)

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
